Sender Side Completed

--- a/user/templates/receiver_list.html
+++ b/user/templates/receiver_list.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
           <tr>
             <td>{{emp['empId']}}</td>
             <td>{{emp['name']}}</td>
-            <td><input type="checkbox" name="say_hello" value={{emp['email']}}> Tick here to Select</td>
+            <td><input type="checkbox" name="say_hello" value={{emp['empId']}}> Tick here to Select</td>
           </tr>
           {% endfor %}
         </table>
